--- a/components/header.html
+++ b/components/header.html
@@ -11,7 +11,7 @@
       <div class="header-container">
         <div class="logo">
           <a href="/index.html">
-            <img src="/images/Logo.png" alt="Site Logo" />
+            <img src="/images/Logo.png" alt="Logo" />
           </a>
         </div>
 
